Fix drawer scrollbar styling

--- a/codelab-elements/google-codelab/_drawer.scss
+++ b/codelab-elements/google-codelab/_drawer.scss
@@ -123,7 +123,6 @@ google-codelab #drawer ol li[completed] .step:before {
   color: #fff;
 }
 
-
 google-codelab #drawer .metadata {
   color: #777;
   font-size: 14px;
@@ -140,7 +139,7 @@ google-codelab #codelab-nav-buttons #menu {
   display: none;
 }
 
-google-codelab #drawer {
+google-codelab #drawer ol {
   ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 7px;
@@ -151,7 +150,6 @@ google-codelab #drawer {
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
   }
 }
-
 
 @media (max-width: 768px) {
   google-codelab {
